# HomeLab-Lambda-CLI

./: README.md  homelab.yaml.example
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: add_server.rs  delete_config.rs  list_servers.rs  mod.rs  update_config.rs
cli/src/config/: mod.rs
lambda/: Cargo.toml
lambda/src/: main.rs
lambda/src/handlers/: add_server.rs  delete_config.rs  list_servers.rs  mod.rs  update_config.rs
lambda/src/models/: server_config.rs
terraform/: main.tf  outputs.tf  variables.tf
